kubernetes/home-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - home.onishenko.tk
    secretName: home-tls
  rules:
  - host: home.onishenko.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headlamp-svc
            port:
              number: 80
